# argdown-feedback

./: CITATION.cff  README.md  demo_client_builders.py  pyproject.toml  test_api_direct.py
examples/: explore_openenv.ipynb
src/argdown_feedback/: __init__.py
src/argdown_feedback/api/: README.md  implementation_plan.md
src/argdown_feedback/api/client/: __init__.py  builders.py  client.py
src/argdown_feedback/api/server/: __init__.py  app.py
src/argdown_feedback/api/shared/: __init__.py  exceptions.py  filtering.py  models.py
src/argdown_feedback/logic/: fol_parser.py  fol_to_nl.py  logic_renderer.py
src/argdown_feedback/tasks/: README.md  base.py  factory.py  registry.py
src/argdown_feedback/tasks/compound/: arganno_plus_infreco.py  arganno_plus_logreco.py  argmap_plus_arganno.py  argmap_plus_arganno_plus_logreco.py  argmap_plus_infreco.py  argmap_plus_logreco.py
src/argdown_feedback/tasks/core/: arganno.py  argmap.py  infreco.py  logreco.py
src/argdown_feedback/verifiers/: arganno_verifier.py  argmap_verifier.py  base.py  infreco_verifier.py  logreco_verifier.py  processing_handler.py  verification_request.py
src/argdown_feedback/verifiers/core/: arganno_handler.py  (+4 more)
src/argdown_hirp/: __init__.py  base.py
src/argdown_hirpo/: __init__.py  base.py
src/argdown_hirpo/logic/: __init__.py  dialectics.py  fol_parser.py  fol_to_nl.py  logic.py  smtlib.py
src/argdown_hirpo/tasks/: base.py
src/argdown_hirpo/verifiers/: arganno_handler.py  argmap_handler.py  base.py  infreco_handler.py  infreco_verifier.py  logreco_handler.py  logreco_verifier.py  processing_handler.py  verification_request.py
src/envs/argdown_analysis/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
src/envs/argdown_analysis/configs/: default.yaml  long.yaml  single_only.yaml
src/envs/argdown_analysis/server/: Dockerfile  __init__.py  app.py  argdown_analysis_environment.py  instructions.py
tests/: hirpo_tester.py  test_base_hirgenerator.py  test_content_check_handler.py  test_foltonl.py  test_hirgenerator1.py  test_hirpo_factory.py  test_solution_generator.py  test_task_arganno.py  test_task_argannofromargmap.py  test_task_argannoplusinfreco.py  test_task_argannopluslogreco.py  test_task_argmapfromarganno.py  test_task_argmapplusarganno.py  test_task_argmapplusargannopluslogreco.py  test_task_argmapplusinfreco.py  test_task_argmappluslogreco.py  test_task_argmaps.py  test_task_infreco.py  test_task_infrecofromarganno.py  test_task_logreco.py  test_task_logrecofrominfreco.py  test_verifiers_arganno_argmap_handler.py  test_verifiers_arganno_handler.py  test_verifiers_arganno_infreco_handler.py  test_verifiers_arganno_logreco_handler.py  test_verifiers_argmap_handler.py  test_verifiers_argmap_infreco_handler.py  test_verifiers_argmap_logreco_handler.py  test_verifiers_infreco_handler.py  test_verifiers_logreco_handler.py  test_verifiers_processing_handler.py  util.py
tests/api/: conftest.py
tests/api/integration/: test_api_endpoints.py  test_client_server.py  test_end_to_end.py  test_real_verifiers.py  test_verifiers_client.py
tests/api/performance/: __init__.py  test_async_requests.py  test_concurrent_requests.py  test_full_server_processing.py
tests/api/unit/: test_backend_http.py  test_backend_inprocess.py  test_builders.py  test_client_refactored.py  test_filtering.py  test_models.py  test_registry.py
tests/envs/: __init__.py  test_argdown_analysis_env.py
(+60 files in other folders)
