[project]
name = "argdown-hirpo"
version = "0.1.0"
description = "Generating preference pairs via HIR for Argdown tasks"
readme = "README.md"
authors = [
    { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "openai>=1.66.3",
    "pyargdown",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyargdown = { git = "https://github.com/ggbetz/pyargdown.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
