[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argdown-feedback"
version = "0.1.0"
description = "Generating preference pairs via HIR for Argdown tasks"
readme = "README.md"
authors = [
    { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "nltk>=3.9.1",
    "openai>=1.66.3",
    "pyargdown @ git+https://github.com/debatelab/pyargdown.git",
    "tenacity>=9.0.0",
    "textdistance[dameraulevenshtein]>=4.6.3",
    "z3-solver>=4.14.1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "requests>=2.32.5",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.dev]
features = ["dev"]
path = ".venv"

[tool.uv.sources]
pyargdown = { git = "https://github.com/debatelab/pyargdown.git" }


