# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-argdown_analysis"
version = "0.1.0"
description = "Argdown Analysis environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    # "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git@main#subdirectory=src/core",
    "openenv-core>=0.1.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "argdown-feedback[api]",
    # Configuration and dataset dependencies
    "pyyaml>=6.0.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m argdown_analysis.server.app
server = "argdown_analysis.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["argdown_analysis", "argdown_analysis.server"]
package-dir = { "argdown_analysis" = ".", "argdown_analysis.server" = "server" }

[tool.uv.sources]
openenv = { git = "https://github.com/meta-pytorch/OpenEnv.git" }
argdown-feedback = { git = "https://github.com/debatelab/argdown-feedback.git", rev = "main" }

[dependency-groups]
dev = [
    "openenv",
]
